@@ -1,3 +1,8 @@
+2008-06-17  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-list.cc:
+	Fix for problem when re-sorting (keep selection visible)
+
 2008-06-16  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-list.cc:
